--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <mat-card>
+    <mat-card *ngIf="ropiByProductCategories">
         <mat-card-header>
             <mat-card-title>ROPI by Product Categories</mat-card-title>
         </mat-card-header>
@@ -80,5 +80,17 @@
                 [legend]="showLegend" [labels]="showLabels" [doughnut]="isDoughnut" [labels]="true"
                 [labelFormatting]="labelFormat" [maxLabelLength]="20" [tooltipText]="tooltipText">
             </ngx-charts-pie-chart>
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card *ngIf="promoCountByPeriod">
+        <mat-card-header>
+            <mat-card-title>Promo Count by Period</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="card-content">
+            <ngx-charts-bar-vertical [view]="view" [results]="promoCountByPeriod" [gradient]="gradientBarChart"
+                [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegendBarChart" [showXAxisLabel]="showXAxisLabel"
+                [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel">
+            </ngx-charts-bar-vertical>
         </mat-card-content>
     </mat-card>
