--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -45,8 +45,93 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
+
+    <br> 
+
+
+
+    
+  </div>
+
+
+
+  <div class="container">
+    <h3 class="uploadHeading " style="color:#56baed;">Products</h3>
+    <input type="file" #productFileDropRef (change)="uploadProductsFile($event)" id="productFileDropRef" hidden />
+    <br>
+    <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
+
+    <label for="productFileDropRef" class="browseButton" *ngIf="isProductsEmpty">Browse</label>
+    <label class="browseButton" *ngIf="!isProductsEmpty" (click)="exportProducts()">Export</label>
+    <button mat-button color="warn" *ngIf="!isProductsEmpty" (click)="deleteProducts()">Delete products</button>
+
+
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(3)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
+    <br>
+    <div *ngIf="isProdLoading"
+      style="margin-top:30%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
+      </mat-progress-spinner>
+    </div>
+    
+  </div>
+
+</div>
+
+<div class="parentcontainer" style="margin-bottom: 5%;background-color:white;">
+  <div class="container">
+    <h3 class="uploadHeading " style="color:#56baed;">Price Scans</h3>
+    <input type="file" #objectFileDropRef (change)="uploadPriceScansFile($event)" id="priceScanFileDropRef" hidden />
+    <BR>
+    <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
+
+    <label for="priceScanFileDropRef" class="browseButton" *ngIf="isPriceScansEmpty">Browse</label>
+    <label class="browseButton" *ngIf="!isPriceScansEmpty" (click)="exportPriceScans()">Export</label>
+    <button mat-button color="warn" *ngIf="!isPriceScansEmpty" (click)="deletePriceScans()">Delete scans</button>
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(4)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
+    <br>
+    <div *ngIf="isPriceScansLoading"
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: transparent;">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
+      </mat-progress-spinner>
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="uploadHeading " style="color:#56baed;">Promos</h3>
+    <input type="file" #positionFileDropRef (change)="uploadPromosFile($event)" id="promosFileDropRef" hidden />
+
+    <BR>
+    <!--<h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>-->
+   <!-- <label for="promosFileDropRef" class="browseButton" *ngIf="isPromosEmpty">Browse</label>-->
+    <label class="browseButton" *ngIf="!isPromosEmpty" (click)="exportPromos()">Export</label>
+    <button mat-button color="warn" *ngIf="!isPromosEmpty" (click)="deletePromos()">Delete promos</button>
+
+    <div class="download-template">
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(5)"></em>
+      <br>
+      <label for="download-obj-template">Download template</label>
+    </div>
+    <br>
+    <div *ngIf="isPosLoading"
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
+      </mat-progress-spinner>
+    </div>
+
+    <br> 
+
+    
     <div class="check" style="margin-left: 20% ;">
-      <h4>Export options:</h4>
+      <h4>Positions export options:</h4>
       <br>
       <mat-checkbox class="example-margin" color="primary" (change)="checkWithImages($event)">With images</mat-checkbox>
     </div>
@@ -112,18 +197,18 @@
 
 
   <div class="container">
-    <h3 class="uploadHeading " style="color:#56baed;">Products</h3>
-    <input type="file" #productFileDropRef (change)="uploadProductsFile($event)" id="productFileDropRef" hidden />
+    <h3 class="uploadHeading " style="color:#56baed;">Conditions</h3>
+    <input type="file" #productFileDropRef (change)="uploadConditionsFile($event)" id="conditionsFileDropRef" hidden />
     <br>
     <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
 
-    <label for="productFileDropRef" class="browseButton" *ngIf="isProductsEmpty">Browse</label>
-    <label class="browseButton" *ngIf="!isProductsEmpty" (click)="exportProducts()">Export</label>
-    <button mat-button color="warn" *ngIf="!isProductsEmpty" (click)="deleteProducts()">Delete products</button>
+    <label for="conditionsFileDropRef" class="browseButton" *ngIf="isConditionsEmpty">Browse</label>
+    <label class="browseButton" *ngIf="!isConditionsEmpty" (click)="exportConditions()">Export</label>
+    <button mat-button color="warn" *ngIf="!isConditionsEmpty" (click)="deleteConditions()">Delete conditions</button>
 
 
     <div class="download-template">
-      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(3)"></em>
+      <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(6)"></em>
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
@@ -132,6 +217,11 @@
       style="margin-top:30%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
+    </div>
+    <div class="check" style="margin-left: 20% ;">
+      <h4>Product export options:</h4>
+      <br>
+     
     </div>
     <div class="select" style="margin-right:10px; margin-top: 60%;">
       <mat-form-field appearance="fill">
