--- a/src/app/components/product-category/product-category.component.html
+++ b/src/app/components/product-category/product-category.component.html
@@ -1,3 +1,14 @@
+<div class="centered">
+    <mat-form-field>
+
+        <input type="text" matInput placeholder="Search product category" [(ngModel)]="search">
+        <button matSuffix mat-button class="search" (click)="loadData(false)">
+            <mat-icon class="search">search</mat-icon>
+        </button>
+
+    </mat-form-field>
+</div>
+
 <div class="container mat-elevation-z8">
 
     <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
@@ -29,4 +40,7 @@
         </mat-progress-spinner>
     </div>
     <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No product categories</mat-toolbar>
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[2, 5, 10, 25, 100]"
+        [length]="length" (page)="loadDataOnPageEvent($event)">
+    </mat-paginator>
 </div>
