--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -31,7 +31,7 @@
     <BR>
     <!--<h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>-->
     <label for="positionFileDropRef" class="browseButton" *ngIf="isPositionsEmpty">Browse</label>
-    <label class="browseButton" *ngIf="!isPositionsEmpty" (click)="exportPositions()">Export</label>
+    <label class="browseButton" *ngIf="!isPositionsEmpty" (click)="openDialog(2)">Export</label>
     <button mat-button color="warn" *ngIf="!isPositionsEmpty" (click)="deletePositions()">Delete positions</button>
 
     <div class="download-template">
@@ -62,7 +62,7 @@
     <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
 
     <label for="productFileDropRef" class="browseButton" *ngIf="isProductsEmpty">Browse</label>
-    <label class="browseButton" *ngIf="!isProductsEmpty" (click)="exportProducts()">Export</label>
+    <label class="browseButton" *ngIf="!isProductsEmpty" (click)="openDialog(3)">Export</label>
     <button mat-button color="warn" *ngIf="!isProductsEmpty" (click)="deleteProducts()">Delete products</button>
 
 
