--- a/src/app/dialogs/excelDialogs/exportProductsDialog/export-products-dialog.component.html
+++ b/src/app/dialogs/excelDialogs/exportProductsDialog/export-products-dialog.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-  <h3 mat-dialog-title>Price Scans export options</h3>
+  <h3 mat-dialog-title>Products export options</h3>
 
   <form class="mat-dialog-content" #formControl="ngForm">
 
-  
     <div class="form">
       <mat-form-field>
         <mat-select [(ngModel)]="productCategory" placeholder="Product Category (optional)" name="productCategory"
