--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -46,9 +46,9 @@
                 <mat-form-field>
                     <mat-label>Enter a date range</mat-label>
                     <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate placeholder="Start date" #dateRangeStart>
+                        <input matStartDate placeholder="Start date" #dateRangeStart [value]="selectedStartDate">
                         <input matEndDate placeholder="End date" #dateRangeEnd
-                            (dateChange)="dateRangeChange(dateRangeStart, dateRangeEnd)">
+                            (dateChange)="dateRangeChange(dateRangeStart, dateRangeEnd)" [value]="selectedEndDate">
                     </mat-date-range-input>
                     <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
