--- a/src/app/components/promo-dashboard/promo-dashboard.component.css
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.css
@@ -390,3 +390,11 @@
     background-color: white;
     color: #56baed;
 }
+
+.expansion-panel {
+    margin: 0 20px 50px 20px;
+}
+
+.expansion-table-body {
+    margin-bottom: 50px;
+}
