--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -1,7 +1,20 @@
 <div class="dashboard" *ngIf="flag === 1">
 
+    <mat-card class="card" [ngClass]="panelOpenState ? 'mb' : ''">
+        <mat-card-header>
+            <mat-card-title>Best estimator</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="card-content" #containerRef>
+            <ngx-charts-number-card [view]="[containerRef.offsetWidth, containerRef.offsetHeight]"
+                [scheme]="colorScheme" [results]="bestEstimators" [cardColor]="cardColor" [textColor]="textColor"
+                *ngIf="bestEstimators && bestEstimators.length > 0">
+            </ngx-charts-number-card>
+        </mat-card-content>
+    </mat-card>
+
     <mat-accordion>
-        <mat-expansion-panel class="expansion-panel" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel class="expansion-panel mt" (opened)="panelOpenState = true"
+            (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Filters
