Nova komponenta za product price scanner

--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -31,7 +31,7 @@
     <div style="justify-content: center;margin-right: 30px;">SECONDARY POSITIONS</div>
   </div>
 
-  <div class="item resolve-fb fadeIn second" [routerLink]="['/product']">
+  <div class="item resolve-fb fadeIn second" [routerLink]="['/priceScanner']">
     <!-- ENABLE: -->
     <p>
       <img src="../../../assets/icons8-barcode-scanner-64.png" width="50px" height="50px"
@@ -48,11 +48,11 @@
     </p>
     <div style="justify-content: center;margin-right: 50px;">RETURNS</div>
   </div>
-<div>
-  <button mat-stroked-button color="primary" class="item2 resolve-fb fadeIn third center"
-    [routerLink]="['/modules']">Exit<mat-icon>exit_to_app</mat-icon></button>
-</div>
-  
+  <div>
+    <button mat-stroked-button color="primary" class="item2 resolve-fb fadeIn third center"
+      [routerLink]="['/modules']">Exit<mat-icon>exit_to_app</mat-icon></button>
+  </div>
+
 
   <!--
   <button mat-raised-button class="fadeIn" color="primary" color="nortz" (click)="logout()">
