--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -21,7 +21,7 @@
 -->
         <ng-container matColumnDef="productName">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name"
-                style="justify-content: left;">Name
+                style="justify-content: left;">Product
             </mat-header-cell>
             <mat-cell *matCellDef="let row" data-label="Product name">{{ row.productName }}</mat-cell>
         </ng-container>
@@ -32,42 +32,22 @@
             <mat-cell *matCellDef="let row" data-label="Weight">{{ row.weight }}g</mat-cell>
         </ng-container>
 
-        <ng-container matColumnDef="manufacturer">
-            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Manufacturer
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="Manufacturer">{{ row.manufacturer }}</mat-cell>
-        </ng-container>
-
         <ng-container matColumnDef="price">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Price
             </mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index" data-label="Price">
-                <form>
-                    <mat-form-field class="price-input">
-                        <input type="numeric" matInput [formControl]="priceFormControls[i]" name="price"
-                            (change)="changePrice(row)" [(ngModel)]="row.price">
-                        <mat-error *ngIf="priceFormControls[i].hasError('pattern')">
-                            Invalid format
-                        </mat-error>
-                    </mat-form-field>
-                </form>
-            </mat-cell>
+            <mat-cell *matCellDef="let row" data-label="Price">{{ row.price }}</mat-cell>
         </ng-container>
 
-        <ng-container matColumnDef="actionPrice">
-            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Promo Price
+        <ng-container matColumnDef="gp2">
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP2
             </mat-header-cell>
-            <mat-cell *matCellDef="let row; let i = index" data-label="Action price">
-                <form>
-                    <mat-form-field class="price-input">
-                        <input type="numeric" matInput [formControl]="actionPriceFormControls[i]" name="actionPrice"
-                            (change)="changePrice(row)" [(ngModel)]="row.actionPrice">
-                        <mat-error *ngIf="actionPriceFormControls[i].hasError('pattern')">
-                            Invalid format
-                        </mat-error>
-                    </mat-form-field>
-                </form>
-            </mat-cell>
+            <mat-cell *matCellDef="let row" data-label="GP2">{{ row.gp2 }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Category
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row" data-label="Category">{{ row.productCategoryName }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -79,12 +59,12 @@
             <mat-cell *matCellDef="let row; let i=index">
                 <button mat-icon-button color="primary">
                     <mat-icon area-label="Edit"
-                        (click)="openDialog(2, row.productIdCompany, row.productName, row.price, row.actionPrice, row.manufacturer, row.weight)">
+                        (click)="openDialog(2, row.productIdCompany, row.productName, row.price, row.weight, row.gp2, row.productCategoryName)">
                         edit</mat-icon>
                 </button>
                 <button mat-icon-button color="primary">
                     <mat-icon area-label="Delete"
-                        (click)="openDialog(3, row.productIdCompany, row.productName, row.price, row.actionPrice, row.manufacturer, row.weight)">
+                        (click)="openDialog(3, row.productIdCompany, row.productName, row.price, row.weight, row.gp2, row.productCategoryName)">
                         delete</mat-icon>
                 </button>
             </mat-cell>
