--- a/src/app/dialogs/product-dialog/product-dialog.component.html
+++ b/src/app/dialogs/product-dialog/product-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add product</h3>
-    <h3 mat-dialog-title *ngIf="flag == 2">Update user: {{data.productName}}</h3>
-    <h3 mat-dialog-title *ngIf="flag == 3">Delete user: {{data.productName}}</h3>
+    <h3 mat-dialog-title *ngIf="flag == 2">Update product: {{data.productName}}</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Delete product: {{data.productName}}</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
         <div class="form">
             <mat-form-field>
@@ -23,27 +23,36 @@
         </div>
         <div class="form">
             <mat-form-field>
-                <input matInput placeholder="Manufacturer" [(ngModel)]="data.manufacturer" name="manufacturer"
-                    [disabled]="flag === 3" required />
-            </mat-form-field>
-        </div>
-        <div class="form">
-            <mat-form-field>
                 <input matInput placeholder="Price" [(ngModel)]="data.price" name="price" type="number"
                     [disabled]="flag === 3" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
-                <input matInput placeholder="Action price" [(ngModel)]="data.actionPrice" name="actionPrice"
-                    type="number" [disabled]="flag === 3" required />
+                <input matInput placeholder="GP2" [(ngModel)]="data.gp2" name="gp2" type="number"
+                    [disabled]="flag === 3" required />
             </mat-form-field>
         </div>
+        <div class="form">
+            <mat-form-field>
+                <mat-label>Product category</mat-label>
+                <input type="text" placeholder="Product cateogry name" aria-label="Product category" matInput
+                    name="productCategoryName" [matAutocomplete]="productCategoryAuto"
+                    (input)="onProductCategoryInputChange($event)" required [(ngModel)]="data.productCategoryName"
+                    [disabled]="flag === 3">
+                <mat-autocomplete autoActiveFirstOption #productCategoryAuto="matAutocomplete">
+                    <mat-option *ngFor="let option of filteredProductCategoryNames" [value]="option">
+                        {{option}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </div>
+        <div *ngIf="showProductCategoryNameError" class="error-message">Invalid product category name</div>
         <div mat-dialog-actions class="wrap">
             <button mat-button class="test" *ngIf="flag === 1" type="submit" (click)="add()"
-                [disabled]="!formControl.valid">Ok</button>
+                [disabled]="!formControl.valid || showProductCategoryNameError">Ok</button>
             <button mat-button class="test" *ngIf="flag === 2" type="submit" (click)="update()"
-                [disabled]="!formControl.valid">Ok</button>
+                [disabled]="!formControl.valid || showProductCategoryNameError">Ok</button>
             <button mat-button class="test item2-delete" *ngIf="flag === 3" type="submit"
                 (click)="delete()">Delete</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
