--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -8,6 +8,7 @@
     <mat-radio-button value="ACTUAL">Actual</mat-radio-button>
     <mat-radio-button value="FINISHED">Finished</mat-radio-button>
     <mat-radio-button value="MY_CONFIRMATION" *ngIf="isEvaluator">My confirmation</mat-radio-button>
+    <mat-radio-button value="PREDEFINED">Predefined</mat-radio-button>
 </mat-radio-group>
 
 <div class="filters">
@@ -94,21 +95,33 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row; let i=index">
+                    <button *ngIf="type === 'PREDEFINED'" mat-icon-button color="primary"
+                        (click)="openDialog(6, row.promoId, row.retailerName, row.productName, '', '', row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, 0, row.predefined)">
+                        Copy
+                    </button>
                     <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
-                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">Confirm
+                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">Confirm
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
+                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Delete">delete</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
                         *ngIf="type === 'FINISHED' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
-                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
+                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
+                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Info">info</mat-icon>
+                    </button>
+                    <button *ngIf="type === 'FINISHED' && !row.predefined" mat-icon-button color="primary"
+                        (click)="setPredefined(row, true)">
+                        Add to predefined
+                    </button>
+                    <button *ngIf="type === 'PREDEFINED' && row.predefined" mat-icon-button color="primary"
+                        (click)="setPredefined(row, false)">
+                        Remove from predefined
                     </button>
                 </mat-cell>
             </ng-container>
