Price Scans promenjeno u Price Scanner u exportu

--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -85,7 +85,7 @@
 
 <div class="parentcontainer" style="margin-bottom: 5%;background-color:white;">
   <div class="container">
-    <h3 class="uploadHeading " style="color:#56baed;">Price Scans</h3>
+    <h3 class="uploadHeading " style="color:#56baed;">Price Scanner</h3>
     <input type="file" #objectFileDropRef (change)="uploadPriceScansFile($event)" id="priceScanFileDropRef" hidden />
     <BR>
     <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
